# DiffAgent

./: CLAUDE.md  README.md  agent.py  cli.py  main.py  models.py  nodes.py  pyproject.toml  requirements.txt  rules.json  state.py  test_agent.py  tools.py  web_search.py
.github/actions/validate-config/: action.yml
.github/workflows/: validate-config.yml
eval/: QUICKSTART.md  README.md  __init__.py  example_usage.py  metrics.py  run_evaluation.py  visualize_results.py
eval/baselines/: __init__.py  rule_based.py  single_shot_gpt.py
eval/data/: test_benchmark.json
eval/dataset_builder/: QUICKSTART.md  README.md  __init__.py  auto_labeler.py  build_dataset.py  data_filter.py  github_collector.py  manual_review.py
